# gis_agent

./: .dockerignore  .env.example  .gitignore  GIS Agent MVP PRD.md  GIS Agent MVP 技术方案与任务拆解.md  README.md  SPEC_IMPLEMENTATION_REPORT.md  SPEC_VERIFICATION_CHECKLIST.md  VERIFICATION_SUMMARY.md  alembic.ini  deepseek.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  开发任务清单.md
.github/workflows/: ci.yml
.sisyphus/plans/: 2026-04-09-architecture-optimization.md
apps/api/: deps.py  main.py
apps/web/: index.html  package.json
docs/: perf-baseline.md
stitch/: DESIGN.md  code.html
tests/: test_agent_runtime.py  test_agent_schemas.py  test_aoi.py  test_artifacts_router.py  test_catalog.py  test_config.py  test_conversation_context.py  test_errors.py  test_explanation.py  test_file_preview.py  test_files_preview_api.py  test_graph_runtime.py  test_intent_service.py  test_live_llm_smoke.py  test_llm_call_logs_model.py  test_llm_client.py  test_message_intent_routing.py  test_message_schema.py  test_message_stream_api.py  test_migrations.py  test_ndvi_pipeline.py  test_operation_plan_builder.py  test_operation_plan_schemas.py  test_operation_registry.py  test_orchestrator.py  test_parser.py  test_plan_approval_flow.py  test_plan_guard.py  test_planner.py  test_processing_pipeline.py  test_prompt_language.py  test_qc.py  test_real_gis_data_backend.py  test_recommendation.py  test_response_policy.py  test_revision_schema.py  test_session_memory.py  test_session_memory_api.py  test_session_memory_confidence.py  test_session_memory_policy.py  (+12 more)
(+47 files in other folders)
