[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-agent"
version = "0.1.0"
description = "GIS Agent MVP engineering scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "geoalchemy2>=0.16,<1.0",
  "psycopg[binary]==3.3.3",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "numpy>=2.0,<3.0",
  "Pillow>=10.4,<12.0",
  "rasterio>=1.4,<2.0",
  "pyshp>=2.3,<3.0",
  "shapely>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.setuptools.package-data]
"packages.domain" = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
